--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -9,27 +9,19 @@
   .row {
     align-items: center;
   }
-}
-
-.pie-box {
-    margin-top: 30px;
-}
-
-.line-box, .pie-box {
-  border: 3px solid #8499c5;
-  border-radius: 5px;
-  padding: 10px 15px;
-}
-
-.prevented-loss {
-  border: 3px solid #8499c5;
-  border-radius: 5px;
-  height: 150px;
-  flex-direction: column;
-  padding: 10px 15px;
-  .body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &.row {
+    margin: 0 0 0 0;
   }
 }
+
+.col-9 > div,
+.col-3 > div {
+  margin-bottom: 30px;
+}
+
+.box {
+  border: 3px solid #8499c5;
+  border-radius: 5px;
+  padding: 20px;
+}
+
